--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
 {% endfor %}
 
 <div class='images' style="display: flex;flex-direction: column;align-items: center;">
-    <img src='/aggs.png'>
-    <img src='/confirmed.png'>
-    <img src='/dead.png'>
-    <img src='/fatality_rate.png'>
+    <img src='/aggs.png' width=50%>
+    <img src='/confirmed.png' width=50%>
+    <img src='/dead.png' width=50%>
+    <img src='/fatality_rate.png' width=50%>
 </div>
 {% endblock %}
