--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
 
 <div class='images' style="display: flex;flex-direction: column;align-items: center;">
     <img src='/aggs.png' width=90%>
+    <img src='/pct_change.png' width=90%>
     <img src='/confirmed.png' width=90%>
     <img src='/dead.png' width=90%>
     <img src='/fatality_rate.png' width=90%>
