added ingestion models.py file and made it save/display images from folders, not on the fly

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,11 @@
 {% endfor %}
 
 <div class='images' style="display: flex;flex-direction: column;align-items: center;">
-    <img src='/aggs.png' width=90%>
-    <img src='/pct_change.png' width=90%>
-    <img src='/confirmed.png' width=90%>
-    <img src='/dead.png' width=90%>
-    <img src='/fatality_rate.png' width=90%>
+    <img src='./static/images/aggs.png' width=90%>
+    <img src='./static/images/pct_change.png' width=90%>
+    <img src='./static/images/confirmed.png' width=90%>
+    <img src='./static/images/dead.png' width=90%>
+    <img src='./static/images/fatality_rate.png' width=90%>
+    
 </div>
 {% endblock %}
